Qsampler - A LinuxSampler Qt GUI Interface
------------------------------------------

ChangeLog

CVS HEAD

* Refresh device management dialog when device informations changed,
  e.g. on changes caused by other frontends
  (fixes segfault on device changes)

* Implemented MIDI device activity windows, selectable from the "View"
  main menu.

* Implemented MIDI activity indicator on channel strips.

* Added FX Sends Dialog to Channel Strips.

* Color pallete fix for the instrument name display in channel strip,
  particularly notorious on Mac OS X builds.

* Added dialog when the application exits which lets the user decide
  whether to keep the LinuxSampler running or not.


0.2.1  2007-12-06  Qt4 migration was complete.

* Added recent new support of libgig for retrieving instrument names in a
  very fast way. If libgig provides this feature, then the respective
  name retrieval setting in qsampler is enabled by default.

* The current selected/activated channel-strip is now visually
  evident while in the application workspace (highlighting).

* Make View/Menubar and Toolbar shortcuts accessible even though
  the main menu and toobar are not visible.

* Audio routing table is initially hidden in the dialog, when
  creating a new sampler channel.

* README requirements and configuration notes update.

* Disable OK button in sampler channel form and MIDI instrument
  form if no valid engine is selected (to avoid bothering newbie
  users with confusing LSCP syntax errors when using the UI the
  first time).

* Fixed creation of devices (don't try to set device parameters
  which the user did not touch in the device creation dialog).

* Added Windows file path support.

* Fixed win32/qmakefile and win32/config.h so that it compiles
  under win32.

* Qt4 port of the application.


0.1.5  2007-10-15 Five months later a fifth is heard.

* Added support for LSCP escape sequences to allow loading and
  mapping instrument files with special characters in their