@@ -5,6 +5,9 @@ ChangeLog
 
 CVS HEAD
 
+* Automatically add & remove channel strips as they were removed e.g. by
+  other frontends.
+
 * Refresh device management dialog when device informations changed,
   e.g. on changes caused by other frontends
   (fixes segfault on device changes)
